Add scanTextAtCaret option (#1632)

--- a/ext/settings.html
+++ b/ext/settings.html
@@ -3227,6 +3227,7 @@
             <option value="playAudioFromSource">Play audio from source</option>
             <option value="copyHostSelection">Copy host window selection</option>
             <option value="scanSelectedText">Scan selected text</option>
+            <option value="scanTextAtCaret">Scan text at caret</option>
             <option value="toggleOption">Toggle option</option>
         </select>
         <div class="hotkey-list-item-action-argument-container"></div>
