Add support for reordering dictionary options (#1641)

--- a/ext/welcome.html
+++ b/ext/welcome.html
@@ -358,6 +358,8 @@
 
 <template id="dictionary-menu-template"><div class="popup-menu-container" tabindex="-1" role="dialog"><div class="popup-menu"><div class="popup-menu-body">
     <button class="popup-menu-item" data-menu-action="showDetails">Details&hellip;</button>
+    <button class="popup-menu-item" data-menu-action="moveUp">Move up</button>
+    <button class="popup-menu-item" data-menu-action="moveDown">Move down</button>
     <button class="popup-menu-item" data-menu-action="delete">Delete</button>
 </div></div></div></template>
 
