Improve internal page overflow (#1660)
* Improve overflow of internal pages

* Improve wrapping of the Origin: example text

--- a/ext/permissions.html
+++ b/ext/permissions.html
@@ -19,6 +19,7 @@
 
 <!-- Main content -->
 <div class="content-outer"><div class="content">
+<div class="content-left"></div>
 <div class="content-center">
 
     <span tabindex="-1" id="content-scroll-focus"></span>
@@ -56,7 +57,7 @@
                         as this can be used to fingerprint browser configuration.
                     </p>
                     <p>
-                        Example: <code>Origin: <span class="extension-id-example"></span></code>
+                        Example: <code class="overflow-wrap-anywhere">Origin: <span class="extension-id-example"></span></code>
                     </p>
                 </div>
             </div>
@@ -189,6 +190,7 @@
     <div class="footer-padding"></div>
 
 </div>
+<div class="content-right"></div>
 </div></div>
 
 
