--- a/ext/legal.html
+++ b/ext/legal.html
@@ -18,6 +18,7 @@
 
 <!-- Main content -->
 <div class="content-outer"><div class="content">
+<div class="content-left"></div>
 <div class="content-center">
 
     <span tabindex="-1" id="content-scroll-focus"></span>
@@ -147,6 +148,7 @@ THE SOFTWARE.
     <div class="footer-padding"></div>
 
 </div>
+<div class="content-right"></div>
 </div></div>
 
 <!-- Scripts -->
