--- a/ext/welcome.html
+++ b/ext/welcome.html
@@ -18,6 +18,7 @@
 
 <!-- Main content -->
 <div class="content-outer"><div class="content">
+<div class="content-left"></div>
 <div class="content-center">
 
     <span tabindex="-1" id="content-scroll-focus"></span>
@@ -178,6 +179,7 @@
     <div class="footer-padding"></div>
 
 </div>
+<div class="content-right"></div>
 </div></div>
 
 
