Change mobile extension page label from "Help" to "Information" (#1661)

--- a/ext/action-popup.html
+++ b/ext/action-popup.html
@@ -77,7 +77,7 @@
         <span class="link-group-icon" data-icon="chevron"></span><span class="link-group-label">Search</span>
     </a>
     <a class="link-group action-open-info">
-        <span class="link-group-icon" data-icon="chevron"></span><span class="link-group-label">Help</span>
+        <span class="link-group-icon" data-icon="chevron"></span><span class="link-group-label">Information</span>
     </a>
 </div>
 
