Improve overflow wrap (#1663)

--- a/ext/permissions.html
+++ b/ext/permissions.html
@@ -57,7 +57,7 @@
                         as this can be used to fingerprint browser configuration.
                     </p>
                     <p>
-                        Example: <code class="overflow-wrap-anywhere">Origin: <span class="extension-id-example"></span></code>
+                        Example: <code class="overflow-wrap">Origin: <span class="extension-id-example"></span></code>
                     </p>
                 </div>
             </div>
