--- a/ext/search.html
+++ b/ext/search.html
@@ -93,6 +93,7 @@
 <script src="/js/display/option-toggle-hotkey-handler.js"></script>
 <script src="/js/display/query-parser.js"></script>
 <script src="/js/display/search-display-controller.js"></script>
+<script src="/js/display/search-persistent-state-controller.js"></script>
 <script src="/js/dom/document-focus-controller.js"></script>
 <script src="/js/dom/document-util.js"></script>
 <script src="/js/dom/dom-text-scanner.js"></script>
