Popup action search (#1678)
* Set up search page in the action popup

* Fix a style causing incorrect overflow

* Fix error when trying to take a screenshot

* Fix popup size on Firefox

--- a/ext/search.html
+++ b/ext/search.html
@@ -36,7 +36,7 @@
                                 <label class="toggle"><input type="checkbox" id="wanakana-enable"><span class="toggle-body"><span class="toggle-track"></span><span class="toggle-knob"></span></span></label>
                                 <span class="search-option-label">Automatic kana conversion</span>
                             </label>
-                            <label class="search-option">
+                            <label class="search-option" id="search-option-clipboard-monitor-container">
                                 <label class="toggle"><input type="checkbox" id="clipboard-monitor-enable"><span class="toggle-body"><span class="toggle-track"></span><span class="toggle-knob"></span></span></label>
                                 <span class="search-option-label">Clipboard monitor</span>
                             </label>
@@ -92,6 +92,7 @@
 <script src="/js/display/element-overflow-controller.js"></script>
 <script src="/js/display/option-toggle-hotkey-handler.js"></script>
 <script src="/js/display/query-parser.js"></script>
+<script src="/js/display/search-action-popup-controller.js"></script>
 <script src="/js/display/search-display-controller.js"></script>
 <script src="/js/display/search-persistent-state-controller.js"></script>
 <script src="/js/dom/document-focus-controller.js"></script>
