Update the search button tooltip to describe Shift+click functionality (#1679)

--- a/ext/action-popup.html
+++ b/ext/action-popup.html
@@ -45,7 +45,7 @@
                 <div class="nav-button-warning-badge-inner"></div>
             </div>
         </a>
-        <a class="nav-button action-open-search" title="Search" data-hotkey='["global:openSearchPage","title","Search ({0})"]'>
+        <a class="nav-button action-open-search" title="Search" data-hotkey='["global:openSearchPage","title","Search ({0})\nShift+click to open here"]'>
             <span class="icon" data-icon="magnifying-glass"></span>
         </a>
         <a class="nav-button action-open-info" title="Information" data-hotkey='["global:openInfoPage","title","Information ({0})"]'>
