--- a/ext/settings.html
+++ b/ext/settings.html
@@ -1257,18 +1257,30 @@
         </div></div>
         <div class="settings-item"><div class="settings-item-inner settings-item-inner-wrappable">
             <div class="settings-item-left">
-                <div class="settings-item-label">Enable sentence termination characters</div>
+                <div class="settings-item-label">Sentence termination characters</div>
             </div>
             <div class="settings-item-right">
-                <label class="toggle"><input type="checkbox" data-setting="sentenceParsing.enableTerminationCharacters"><span class="toggle-body"><span class="toggle-track"></span><span class="toggle-knob"></span></span></label>
-            </div>
-        </div></div>
-        <div class="settings-item settings-item-button" data-modal-action="show,sentence-termination-characters"><div class="settings-item-inner">
-            <div class="settings-item-left">
-                <div class="settings-item-label">Configure sentence termination characters&hellip;</div>
-            </div>
-            <div class="settings-item-right open-panel-button-container">
-                <button class="icon-button"><span class="icon-button-inner"><span class="icon" data-icon="material-right-arrow"></span></span></button>
+                <div class="horizontal-flex horizontal-flex-nowrap">
+                    <button class="low-emphasis" data-modal-action="show,sentence-termination-characters" id="configure-sentence-termination-characters-button" hidden>Configure&hellip;</button>
+                    <select data-setting="sentenceParsing.terminationCharacterMode"
+                        data-transform='{
+                            "type": "setVisibility",
+                            "selector": "#configure-sentence-termination-characters-button",
+                            "condition": {
+                                "op": "||",
+                                "value": [
+                                    {"op": "===", "value": "custom"},
+                                    {"op": "===", "value": "custom-no-newlines"}
+                                ]
+                            }
+                        }'
+                    >
+                        <option value="custom">Custom</option>
+                        <option value="custom-no-newlines">Custom, no newlines</option>
+                        <option value="newlines">Newlines only</option>
+                        <option value="none">None</option>
+                    </select>
+                </div>
             </div>
         </div></div>
     </div>
