Expose search query to anki template renderer (#1686)
* Expose query and fullQuery to Anki context

* Add {search-query} marker

* Update test data

* Update tests

* Wrap search query in multiLine

--- a/ext/settings.html
+++ b/ext/settings.html
@@ -2878,6 +2878,10 @@
                     <td>Screenshot of the web page taken at the time the term or kanji was added.</td>
                 </tr>
                 <tr>
+                    <td><code class="anki-field-marker">{search-query}</code></td>
+                    <td>The full search query shown on the search page.</td>
+                </tr>
+                <tr>
                     <td><code class="anki-field-marker">{sentence}</code></td>
                     <td>Sentence, quote, or phrase that the term or kanji appears in from the source content.</td>
                 </tr>
