--- a/ext/settings.html
+++ b/ext/settings.html
@@ -2399,13 +2399,6 @@
                 <div class="settings-item-right">
                     <div class="settings-item-group">
                         <div class="settings-item-group-item">
-                            <div class="settings-item-group-item-label">Type</div>
-                            <select class="short-width short-height" data-setting="audio.customSourceType">
-                                <option value="audio">Audio</option>
-                                <option value="json">JSON</option>
-                            </select>
-                        </div>
-                        <div class="settings-item-group-item">
                             <div class="settings-item-group-item-label">URL</div>
                             <input class="short-height" type="text" spellcheck="false" autocomplete="off" data-setting="audio.customSourceUrl" placeholder="None">
                         </div>
@@ -2483,7 +2476,8 @@
         <option value="jisho">Jisho.org</option>
         <option value="text-to-speech">Text-to-speech</option>
         <option value="text-to-speech-reading">Text-to-speech (Kana reading)</option>
-        <option value="custom">Custom</option>
+        <option value="custom">Custom URL</option>
+        <option value="custom-json">Custom URL (JSON)</option>
     </select>
     <button class="icon-button audio-source-menu-button" data-menu="audio-source-menu" data-menu-position="below left"><span class="icon-button-inner"><span class="icon" data-icon="kebab-menu"></span></span></button>
 </div></template>
