Move structured-content generation code into a separate file (#1757)

--- a/ext/pitch-accents-preview.html
+++ b/ext/pitch-accents-preview.html
@@ -57,6 +57,7 @@
 <script src="/js/comm/api.js"></script>
 <script src="/js/comm/cross-frame-api.js"></script>
 <script src="/js/display/display-generator.js"></script>
+<script src="/js/display/structured-content-generator.js"></script>
 <script src="/js/dom/html-template-collection.js"></script>
 
 <script src="/js/pages/settings/pitch-accents-preview-main.js"></script>
