--- a/ext/search.html
+++ b/ext/search.html
@@ -95,6 +95,7 @@
 <script src="/js/display/search-action-popup-controller.js"></script>
 <script src="/js/display/search-display-controller.js"></script>
 <script src="/js/display/search-persistent-state-controller.js"></script>
+<script src="/js/display/structured-content-generator.js"></script>
 <script src="/js/dom/document-focus-controller.js"></script>
 <script src="/js/dom/document-util.js"></script>
 <script src="/js/dom/dom-text-scanner.js"></script>
