--- a/ext/popup.html
+++ b/ext/popup.html
@@ -108,6 +108,7 @@
 <script src="/js/display/element-overflow-controller.js"></script>
 <script src="/js/display/option-toggle-hotkey-handler.js"></script>
 <script src="/js/display/query-parser.js"></script>
+<script src="/js/display/structured-content-generator.js"></script>
 <script src="/js/dom/document-focus-controller.js"></script>
 <script src="/js/dom/document-util.js"></script>
 <script src="/js/dom/dom-text-scanner.js"></script>
