--- a/ext/popup.html
+++ b/ext/popup.html
@@ -100,6 +100,7 @@
 <script src="/js/data/anki-note-builder.js"></script>
 <script src="/js/data/anki-util.js"></script>
 <script src="/js/display/display.js"></script>
+<script src="/js/display/display-anki.js"></script>
 <script src="/js/display/display-audio.js"></script>
 <script src="/js/display/display-generator.js"></script>
 <script src="/js/display/display-history.js"></script>
