Template renderer media updates (#1802)
* Add TemplateRendererMediaProvider to abstract media-related functionality

* Update representation of injected media

* Update templates

* Update upgrade file

* Update tests

* Update test data

* Force media to be an object

* Update test data

--- a/ext/template-renderer.html
+++ b/ext/template-renderer.html
@@ -24,6 +24,7 @@
 <script src="/js/language/japanese-util.js"></script>
 <script src="/js/templates/template-renderer.js"></script>
 <script src="/js/templates/template-renderer-frame-api.js"></script>
+<script src="/js/templates/template-renderer-media-provider.js"></script>
 
 <script src="/js/templates/template-renderer-frame-main.js"></script>
 
